--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "cert": "openssl req -nodes -new -x509 -keyout key.pem -out cert.pem"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
